--- a/Resources/translations/LpiNewsBundle.fr.xliff
+++ b/Resources/translations/LpiNewsBundle.fr.xliff
@@ -42,6 +42,19 @@
                 <source>form.label_galerie</source>
                 <target>Image</target>
             </trans-unit>
+
+
+            <trans-unit id="news.form.label_gallery">
+                <source>form.label_gallery</source>
+                <target>Gallerie</target>
+            </trans-unit>
+
+            <trans-unit id="news.form.label_image_slider">
+                <source>form.label_image_slider</source>
+                <target>Image Slider</target>
+            </trans-unit>
+
+
             <trans-unit id="list.label_title">
                 <source>list.label_title</source>
                 <target>Titre</target>
